app/src/main/java/com/example/ecommerce/presentation/ui/theme/Color.kt
package com.example.ecommerce.presentation.ui.theme

import androidx.compose.ui.graphics.Color

val Black = Color(0xFF222222)
val White = Color(0xFFFFFFFF)
val Gray = Color(0xFF9B9B9B)
val Error = Color(0xFFF01F0E) //error
val Hot = Color(0xFFDB3022) //sale, hot
val Success = Color(0xFF2AA952) //success

//light
val LightBackground = Color(0xFFF9F9F9)
val LightPrimary = Color(0xFFDB3022)

//main bottom nav color
val MainNavGray = Color(0xFF979797)

//star color
val StartYellow = Color(0xFFFFBA49)